--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,4 +34,4 @@ jobs:
           wait-for-service-stability: true
       
       - name: App Runner output
-        run: echo "App runner output ${{ steps.deploy-apprunner.outputs.service-id }
+        run: echo "App runner output ${{ steps.deploy-apprunner.outputs.service-id }}
