--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,7 +21,7 @@ jobs:
         uses: awslabs/amazon-app-runner-deploy@main # Deploy app runner service
         with:
           service: app-runner-git-deploy-service
-          source-connection-arn: ${{ secrets.AWS_CONNECTION_SOURCE_ARN }}
+          source-connection-arn: ${{ secrets.TEST}}
           repo: https://github.com/${{ github.repository }}
           branch: ${{ github.ref }}
           runtime: NODEJS_12
