--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,21 +14,21 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ${{ secrets.AWS_REGION }}
           
       - name: Deploy to App Runner
         id: deploy-apprunner
         uses: awslabs/amazon-app-runner-deploy@main # Deploy app runner service
         with:
           service: app-runner-git-deploy-service
-          source-connection-arn: 'arn:aws:codestar-connections:us-east-1:885656451723:connection/690cdc7f-d0e7-4160-89ad-4dae4118f097'
+          source-connection-arn: ${{ secrets.AWS_CONNECTION_SOURCE_ARN }}
           repo: https://github.com/fengxinru1490/apprunner-test
-          branch: main
+          branch: ${{ github.ref }}
           runtime: NODEJS_12
           build-command: npm install
           start-command: npm start
           port: 18000
-          region: us-east-1
+          region: ${{ secrets.AWS_REGION }}
           cpu : 1
           memory : 2
           wait-for-service-stability: true
