--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,7 +21,7 @@ jobs:
         uses: awslabs/amazon-app-runner-deploy@main # Deploy app runner service
         with:
           service: app-runner-git-deploy-service
-          source-connection-arn: ${{ secrets.AWS_CONNECTION_SOURCE_ARN }}
+          source-connection-arn: arn:aws:apprunner:us-east-1:885656451723:connection/test-apprunner/dab8af335d4940fbaacb8acb183a6160
           repo: https://github.com/fengxinru1490/apprunner-test
           branch: ${{ github.ref }}
           runtime: NODEJS_12
