--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,13 +21,13 @@ jobs:
         uses: awslabs/amazon-app-runner-deploy@main # Deploy app runner service
         with:
           service: app-runner-git-deploy-service
-          source-connection-arn: arn:aws:apprunner:us-east-1:885656451723:connection/test-apprunner/dab8af335d4940fbaacb8acb183a6160
+          source-connection-arn: arn:aws:apprunner:us-east-1:885656451723:connection/apprunner-test/4ca52831294f433fa9387f540137209c
           repo: https://github.com/fengxinru1490/apprunner-test
           branch: ${{ github.ref }}
           runtime: NODEJS_12
-          build-command: npm install
-          start-command: npm start
-          port: 18000
+          build-command: cd bot && yarn install && yarn run build
+          start-command: cd bot && yarn run start
+          port: 3978
           region: ${{ secrets.AWS_REGION }}
           cpu : 1
           memory : 2
